fix navbar height, removed max-height of 6vh as the mobile view made the navbar too short

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,6 @@ body {
   background: #333;
   color: #fff;
   z-index: 10;
-  max-height: 6vh;
 }
 
 /* Projects */
